fixed horizontal scrollbar appearing

--- a/src/global.css
+++ b/src/global.css
@@ -77,7 +77,7 @@
     @apply overflow-hidden;
   }
   * {
-    @apply border-border;
+    @apply border-border overflow-hidden;
   }
   body {
     @apply bg-background text-foreground;
